# ghc-cabal-2021-demo

./: CHANGELOG.md  LICENSE  ghc-cabal-demo.cabal  ghc-cabal2021-demo.cabal  hie.yaml
lib/: BasicSum.hs
tests/: BasicSumTest.hs
