cabal-version:      3.14
name:               ghc-cabal-demo-lib
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             FirstName LastName
maintainer:         firstname@my.org
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable ghc-cabal-demo
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   app
    default-language: GHC2021

library 
    import:           warnings
    exposed-modules: BasicSum
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   lib
    default-language: GHC2021

test-suite ghc-cabal-demo-lib-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          BasicSumTest.hs
    build-depends:
        base ^>=4.20.0.0,
        HUnit ^>=1.6.2.0,
        ghc-cabal-demo-lib
