cabal-version:      3.14

name:               ghc-cabal2021-demo
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rajkumar Natarajan
maintainer:         rajkumar.natarajan@ekata.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

library ghc-cabal2021-demo-lib
    import:           warnings
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs: lib
    exposed-modules: BasicSum
    default-language: GHC2021

-- executable ghc-cabal2021-demo
--     import:           warnings
--     main-is:          Main.hs
--     build-depends:    base ^>=4.20.0.0
--     hs-source-dirs:   app
--     default-language: GHC2021
-- 

test-suite tests
    import:           warnings
    type: exitcode-stdio-1.0
    main-is: BasicSumTest.hs
    build-depends: base ^>=4.20, HUnit ^>=1.6, ghc-cabal2021-demo-lib
    hs-source-dirs: tests
    default-language: GHC2021
    tests: True
